2004-10-07 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * CLEANUP_ROUND (5) for gdcmPixelConvert (Upshit creek without a paddle)
    - src/gdcmDocument.[cxx|h] Parse7Fe0 renamed to ComputeRLEInfo.
      This is because Parse7Fe0 used to parse the pixels to compute the
      length. This task was passed over to FindDocEntryLengthOB() a long
      time ago, EXCEPT I had forgotten the OW case...
      Hence Parse7Fe0 was no longer necessary. When renaming to ComputeRLEInfo
      we just recylce the code for parsing RLE fragments and computing
      offsets.
  * CLEANUP_ROUND (6) for gdcmPixelConvert (man, I need a paddle bad)
    - src/gdcmRLE.cxx: is now much simpler and avoids code replication
        with the retired Parse7Fe0().
    - src/gdcmRLEFrame.h: type fix for properly computing OffSet[]
    - src/gdcmDocument.cxx: segments offset are now correct + clean up.

2004-10-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * CLEANUP_ROUND (3) for gdcmPixelConvert (nightmare stage)
    - src/gdcmRLEFramesInfo.[cxx|h], gdcmRLEFrame.h added
    - src/gdcmDocument.[cxx|h] ::Parse7FE0 now sets up the RLEInfo.
    - src/CMakeLists.txt: alphabetic order reodering + new entries.
  * CLEANUP_ROUND (4) for gdcmPixelConvert
    - src/gdcmDocument.[cxx|h] ::ParseDES and ::ParseSQ no longer bother
      to return an unused length.

2004-10-01 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Added documentation of vtkgdcmReader on Website:
     - testvtkGdcmReader.cxx renamed to vtkGdcmDemo.cxx (to be compatible
       with it's binary name).
     - vtk/vtkGdcmDemo.cxx and vtkgdcmViewer.cxx: added comments for
       the Website to be more complete.
     - Doc/doxygen.config.in: vtk/vtkGdcmReader.cxx now appears on 
       doxygenated documentation.
     - Doc/DoxyVtkGdcmReaderExamples.txt added
       (see http://www.creatis.insa-lyon.fr/Public/Gdcm/html.developper/
                  DoxyVtkGdmReaderExamples.html )